# Iceberg

./: .gitignore  BaseState.h  CMakeLists.txt  main.cpp  readme.md  save_manager.cpp  save_manager.h  state_machine.cpp  state_machine.h
abilities/: ability.h  basic_attack.cpp  basic_attack.h  bow.cpp  bow.h  dash.cpp  dash.h  grapplingHook.cpp  grapplingHook.h  none_ability.cpp  none_ability.h
animation/: animation.cpp  animation.h
data/: map_iceberg_test.json
map/: maptest.cpp  maptest.h
media/tilesets/: map.json
objects/: checkpoint.cpp  checkpoint.h  layer.cpp  layer.h  object.h  object_physics.cpp  object_physics.h  sprite.cpp  sprite.h
objects/entities/: bigSlime.cpp  bigSlime.h  entity.cpp  entity.h  greenSlime.cpp  greenSlime.h  player.cpp  player.h  redSlime.cpp  redSlime.h  skeleton.cpp  skeleton.h  slime.cpp  slime.h
objects/on_screen/: on_screen_object.cpp  on_screen_object.h
objects/particles/: arrow.cpp  arrow.h  grappler.cpp  grappler.h  particle.h
saves/: save.json
states/: choose_ability_state.cpp  choose_ability_state.h  config_state.cpp  config_state.h  death_state.cpp  death_state.h  main_menu_state.cpp  main_menu_state.h  pause_state.cpp  pause_state.h  play_state.cpp  play_state.h  splash_state.cpp  splash_state.h  upgrade_state.cpp  upgrade_state.h
utility/: polygon.h  sound_manager.cpp  sound_manager.h  texture_manager.cpp  texture_manager.h
